--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!--css-stylesheets-->
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="css\styles.css">
+  <link rel="stylesheet" href="styles.css">
   <!--fontawesome-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 
@@ -58,7 +58,7 @@
         </div>
 
         <div>
-          <img class="title-image" src="images/laptop-mockup.png" alt="laptop-mockup">
+          <img class="title-image" src="laptop-mockup.png" alt="laptop-mockup">
         </div>
 
       </div>
@@ -104,14 +104,14 @@
         <div class="carousel-item active">
 
           <h2>PayCash is great, it's easy to use and I like that it's available on so many merchant's website. check it out guys.</h2>
-          <img class="testimonial-image" src="images/angela.png" alt="profile">
+          <img class="testimonial-image" src="angela.png" alt="profile">
           <em>Fela yu, New York</em>
         </div>
 
         <div class="carousel-item">
 
           <h2 class="testimonial-text">PayCash is extraordinary, it's not difficult to utilize and I appreciate that.</h2>
-          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+          <img class="testimonial-image" src="lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
 
         </div>
@@ -134,10 +134,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
-    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
-    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
+    <img class="press-logo" src="TechCrunch.png" alt="tc-logo">
+    <img class="press-logo" src="tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="mashable.png" alt="mashable-logo">
 
   </section>
 
